# War2d

./: CMakeLists.txt  README.md  main.cpp
Controller/: controller.cpp  controller.h
GameObjects/: bot_tank.cpp  bot_tank.h  bullet.cpp  bullet.h  game_object.cpp  game_object.h  plane.cpp  plane.h  player_tank.cpp  player_tank.h  ship.cpp  ship.h  tank.cpp  tank.h  vehicle.cpp  vehicle.h
MainWindow/: hangar.cpp  hangar.h  main_window.cpp  main_window.h
Model/: model.cpp  model.h  player.cpp  player.h  weapon_handler.cpp  weapon_handler.h
Utils/: pixmap_loader.cpp  pixmap_loader.h  vec2f.cpp
View/: view.cpp  view.h
